<?xml version="1.0"?>
<package format="2">
  <name>pwm_thrust_calib</name>
  <version>0.0.0</version>
  <description>The pwm_thrust_calib package</description>

  <maintainer email="dongjae713@gmail.com">dj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
